--- a/webtable.html
+++ b/webtable.html
@@ -181,7 +181,7 @@
 <body id="page-top" class="js">
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-      <div class="container-fluid" id=logo> <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets\images\logo-nasem-wht-lg.png" alt="NAS and The Royal Society logos" class="nasemid" /></a>
+      <div class="container-fluid" id=logo> <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="\assets\images\logo-nasem-wht-lg.png" alt="NAS and The Royal Society logos" class="nasemid" /></a>
         <!-- <div class="navbar-collapse collapse" id="coverImage" style=""><img src="assets/images/Report Cover images.png" alt="CONSENSUS STUDY REPORT COVER" style="width:50px;height:60px;"></div> -->
       </div>
     </nav>
