--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       display: inline;
       margin-left: 75%
     }
+
     #searchInput {
       display: block;
       margin: auto;
@@ -621,7 +622,24 @@
       </tr>
     </tbody>
   </table>
-
+  <footer class="py-5 bg-dark" style="position:relative;"> <br>
+    <br>
+    <div class="container mx-auto"> <a href="http://www.nas.edu" title="The National Academies of Sciences, Engineering, and Medicine" target="_blank"><img src="https://www.nap.edu/images/hdr/logo-nasem-wht-lg.png"
+          alt="The National Academies of Sciences, Engineering, and Medicine" style="max-height: 80px; margin: 0 auto 20px auto; display: block;"></a>
+      <address style="color: white; text-align: center;" class="m-0 text-center text-white">
+        500 Fifth St., NW | Washington, DC 20001<br>
+        &copy; <script type="text/javascript">
+          var d = new Date();
+          var n = d.getFullYear();
+          document.write(n)
+          //-->
+        </script> National Academy of Sciences. All rights reserved.
+      </address>
+      <br>
+      <p class="text-center" style="text-align: center; padding: 20px;"> <a class="legal" style="font-size: 14px; color: #ccc" href="http://www.national-academies.org/legal">Terms of Use and Privacy Statement</a></p>
+    </div>
+    <!-- /.container -->
+  </footer>
 
 </body>
 
