--- a/index.html
+++ b/index.html
@@ -192,11 +192,19 @@
         <h1>Rental Eviction <span class="smaller"><em>and the</em></span><br>
           COVID-19 Pandemic</h1>
         <p class="lead">
-          While moratoriums have protected large numbers of people from evictions throughout the pandemic, they are not a lasting solution because they do not protect landlords and do not address the underlying causes of the problem. Preventing the
-          massive wave of evictions likely to happen when moratoriums are lifted is a key part of the economic and health recoveries from the pandemic recession. This report recommends robust actions needed to build and sustain housing security in
-          the immediate to near future and ensure a rapid and sustained economic recovery.</p>
+          Preventing the wave of evictions likely to occur when U.S. state and federal moratoria are lifted will be a key component of recovering as a nation from the economic and health impacts of the COVID-19 pandemic. Actionable guidance is
+          urgently needed on how to ensure that renters can stay in their homes and housing aid reaches the communities that need it the most.
+        </p>
 
-        <p class="lead">In the body of this report, the proposed actions are color coded to indicate the various timeframes: near-term, or weeks to a few months (green); short-term, or 3–12 months (yellow); or medium-term, or 12–36 months (blue).</p>
+        <p class="lead">In response to this need, the National Academies’ <a href="https://www.nationalacademies.org/our-work/response-and-resilient-recovery-strategic-science-initiative-a-rapid-multidisciplinary-scientific-capability-for-scenario-analysis">Response and Resilient Recovery Strategic Science Initiative</a> (R³SSI) convened a strategy group to generate key recommendations via a scenario planning process. The resulting
+          report, <a href="https://www.nationalacademies.org/our-work/response-and-resilient-recovery-strategic-science-initiative-strategy-group-on-covid-and-rental-evictions">Rental Eviction and the COVID-19 Pandemic: Averting a Looming Crisis</a>, applies R³SSI’s mission – protecting critical societal functions, bringing to bear the resources and partners necessary to solve complex problems, and building
+          permanent security and system resilience for the future – to the rental housing instability crisis.
+        </p>
+
+        <p class="lead">
+          This page provides a sortable and searchable interface for key stakeholders to extract, engage with, and interpret the report’s content quickly and directly. The table contains abbreviated text and is only for reference, so be sure to refer
+          to the <a href="https://www.nationalacademies.org/our-work/response-and-resilient-recovery-strategic-science-initiative-strategy-group-on-covid-and-rental-evictions">FULL REPORT</a> for the complete recommendations and study process.
+        </p>
         <!-- <p><a href="#tables"><i class="las la-arrow-circle-down"></i> <em>Scroll down to read recommended actions</em></a> </p> -->
         <!-- </div> -->
         <img src="assets/images/categoryGraphic.png" alt="Category Graphic" height="500px" width="600px" style="display: block; text-align: center;"></img>
