--- a/index.html
+++ b/index.html
@@ -207,7 +207,10 @@
         </p>
         <!-- <p><a href="#tables"><i class="las la-arrow-circle-down"></i> <em>Scroll down to read recommended actions</em></a> </p> -->
         <!-- </div> -->
-        <img src="assets/images/categoryGraphic.png" alt="Category Graphic" height="500px" width="600px" style="display: block; text-align: center;"></img>
+        <img src="assets/images/tableGraphic1.png" alt="Category Graphic 1" height="700px" width="100%" style="display: block; text-align: center;"></img>
+        <img src="assets/images/tableGraphic2.png" alt="Category Graphic 2" height="700px" width="100%" style="display: block; text-align: center;"></img>
+        <input id="searchInput" style="font-size: 22px" placeholder="Search by actor, partner or timeframe - e.g. 'landords' or 'state governments'" size="75">
+        <p style="text-align: center;">Click on table headers to sort alphabetically by column</p>
       </div>
     </div>
 
@@ -249,8 +252,6 @@
       });
     });
   </script>
-  <input id="searchInput" style="font-size: 22px" placeholder="Search by actor, partner or timeframe - e.g. 'landords' or 'state governments'" size="75">
-  <p style="text-align: center;">Click on table headers to sort alphabetically by column</p>
   <table cellspacing="0" cellpadding="0" id="table-1" class="searchable sortable">
     <thead>
       <tr>
