meta tag finishing touches1

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   <link rel="stylesheet" href="/assets/css/styles.css">
   <link rel="stylesheet" href="/assets/css/print.css" media="print">
 
-  <meta name="description" content="Page description">
+  <meta name="description" content="NASEM Report Regarding Covid-19 & Rental Evictions">
 
   <link rel="icon" type="image/png" href="assets/images/Report Cover images.png">
   <meta name="theme-color" content="#FF00FF">
